fixed to work with phaser 3.21.0 and canvas

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
                 height: 100%;
             }
         </style>
-        <script src="phaser.js"></script>
+        <script src="phaser-cogg.js"></script>
     </head>
     <body></body>
     <script src="./app.js"></script>
